--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Caaaarbs",
+	"name": "cade",
 	"version": "1.0",
-	"description": "Paleo's best friend.",
+	"description": "name changer thing",
 	"icons": { "16": "images/carbs16.png",
            "48": "images/carbs48.png",
           "128": "images/carbs128.png" },
