--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"name": "cade",
 	"version": "1.0",
 	"description": "name changer thing",
-	"icons": { "16": "https://github.com/skwergles/cade/blob/master/images/IMG_1263.png?raw=true",
-           "48": "https://github.com/skwergles/cade/blob/master/images/IMG_1263.png?raw=true",
+	"icons": { "16": "https://raw.githubusercontent.com/skwergles/cade/master/images/IMG_1263.png",
+           "48": "https://raw.githubusercontent.com/skwergles/cade/master/images/IMG_1263.png",
           "128": "https://github.com/skwergles/cade/blob/master/images/IMG_1263.png?raw=true" },
 	"content_scripts": 
 	[
