--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"name": "cade",
 	"version": "1.0",
 	"description": "name changer thing",
-	"icons": { "16": "images/IMG_1263.png",
-           "48": "images/IMG_1263.png",
-          "128": "images/IMG_1263.png" },
+	"icons": { "16": "images/carbs16.png",
+           "48": "images/carbs48.png",
+          "128": "images/carbs128.png" },
 	"content_scripts": 
 	[
 		{
