--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
 	"name": "cade",
 	"version": "1.0",
 	"description": "name changer thing",
+		"browser_action": {
+			"default_icon": "icon.png"
+			"popup":"popup.html"
+		}
+	}
 	"icons": { "16": "images/carbs16.png",
            "48": "images/carbs48.png",
           "128": "images/carbs128.png" },
