--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,10 @@
 	"version": "1.0",
 	"description": "name changer thing",
 		"browser_action": {
-			"default_icon": "icon.png"
+			"default_icon": "images/carbs16.png"
 			"popup": "popup.html"
 		}
 	}
-	"icons": { "16": "images/carbs16.png",
-           "48": "images/carbs48.png",
-          "128": "images/carbs128.png" },
 	"content_scripts": 
 	[
 		{
