--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0",
 	"description": "name changer thing",
 		"browser_action": {
-			"default_icon": "images/carbs16.png"
+			"default_icon": "images/carbs16.png",
 			"popup": "popup.html"
 		}
 	}
