fixed image error

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0",
 	"description": "name changer thing dood",
 	"browser_action": {
-			"default_icon": "images/carbs16.png",
+			"default_icon": "IMG_1263.png",
 			"popup": "popup.html"
 	},
 	
